--- a/src/App.css
+++ b/src/App.css
@@ -102,8 +102,8 @@ button:active {
 #refresh{
     display: block;
     position: absolute;
-    top: 133px;
-    right: 144px;
+    top: 23.6%;
+    right: 10.5%;
     border-radius: 
     }
 .weather__info {
